--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,20 +1,21 @@
 [toolchain]
 anchor_version = "0.30.1"
-package_manager = "yarn"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.localnet]
-binary_option = "9L4vos4SJyyKtgiVjKsPQxPKbtwYsMuCcbcrkxaLsaQj"
+binary_option = "HC2L1MCeKvd9EgvjrahyGRk3FbZwBnUUz3L4BHYHKf8i"
+
+[programs.testnet]
+binary_option = "HC2L1MCeKvd9EgvjrahyGRk3FbZwBnUUz3L4BHYHKf8i"
+
+[programs.devnet]
+binary_option = "HC2L1MCeKvd9EgvjrahyGRk3FbZwBnUUz3L4BHYHKf8i"
 
 [registry]
 url = "https://api.apr.dev"
-
-[provider]
-cluster = "localnet"
-wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
