--- a/programs/binary-option/Cargo.toml
+++ b/programs/binary-option/Cargo.toml
@@ -20,3 +20,9 @@ idl-build = ["anchor-lang/idl-build"]
 [dependencies]
 anchor-lang = "0.30.1"
 
+[profile.release]
+overflow-checks = false
+lto = "fat"
+codegen-units = 1
+opt-level = "z"
+
