--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "init-config": "ts-node scripts/initialize-config.ts",
     "create-pool": "ts-node scripts/create-pool.ts",
     "settle-pool": "ts-node scripts/settle-pool.ts",
-    "scan-history": "ts-node listener/listener_frontend.ts"
+    "scan-history": "ts-node listener/listener_frontend.ts",
+    "shutdown": "ts-node scripts/emergency-shutdown.ts full-shutdown",
+    "test": "anchor test",
+    "test:emergency": "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/emergency-shutdown.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
